--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@ h1{
 <h1>SUMAYYAH'S BLOG</h1>
 <div id="navbtn">
       
-  <a href="Index.html"> Home </a>
+  <a href="index.html"> Home </a>
 
-  <a href="news.html"> News </a>
+  <a href="index.html"> News </a>
 
-  <a href="about us.html"> About Us </a>
+  <a href=""> About Us </a>
 
-  <a href="contact us.html"> Contact Us </a>
+  <a href=""> Contact Us </a>
   
   <div class="search-bar">
     <input class="search-box" type="search" placeholder="Search Here" />
